# mlops

./: .gitignore  README.md
Docker1/: README.md
mlops_week4/: .gitignore  Dockerfile  README.md  hello.py  pyproject.toml
mlops_week4/src/: eval.py  infer.py  train.py
mlops_week4/src/datamodules/: dogbreed_datamodule.py
mlops_week4/src/models/: timm_classifier.py
mlops_week5/: pyproject.toml
mlops_week5/configs/: eval.yaml
mlops_week5/lightning_logs/version_0/: events.out.tfevents.1728808956.codespaces-41535f
mlops_week5/lightning_logs/version_1/: events.out.tfevents.1728890699.codespaces-41535f
mlops_week5/lightning_logs/version_2/: events.out.tfevents.1728890982.codespaces-41535f
mlops_week5/lightning_logs/version_3/: events.out.tfevents.1728891056.codespaces-41535f
mlops_week5/lightning_logs/version_4/: events.out.tfevents.1729002299.codespaces-41535f
mlops_week5/lightning_logs/version_5/: events.out.tfevents.1729007318.codespaces-41535f
mlops_week5/lightning_logs/version_6/: events.out.tfevents.1729008048.codespaces-41535f
mlops_week5/lightning_logs/version_7/: events.out.tfevents.1729009301.codespaces-41535f
mlops_week5/lightning_logs/version_8/: events.out.tfevents.1729009353.codespaces-41535f
mlops_week5/lightning_logs/version_9/: events.out.tfevents.1729010707.codespaces-41535f
mlops_week5/src/: eval.py
mlops_week5/src/datamodules/: dogbreed_datamodule.py  split.py
mlops_week7/: .gitignore  =1.2.0  README.md  pyproject.toml
mlops_week7/.github/workflows/: ci-pipeline.yaml
mlops_week7/configs/: train.yaml
mlops_week7/configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml
mlops_week7/configs/data/: dogbreed.yaml
mlops_week7/configs/dataset/: dataset.yaml
mlops_week7/configs/experiment/: dogbreed_ex_train.yaml
mlops_week7/configs/hparams/: dogbreed_ex_vit_hparam.yaml
mlops_week7/configs/hydra/: default.yaml
mlops_week7/configs/model/: dogbreed_classifier.yaml
mlops_week7/configs/trainer/: default.yaml
mlops_week7/src/: hello.py  train.py
mlops_week7/src/datamodules/: dogbreed_datamodule.py
mlops_week7/src/models/: dogbreed_classifer.py
mlops_week7/tests/: test_train.py
mlops_week7/tests/data_modules/: test_dogbreed_datamodules.py
(+133 files in other folders)
