[project]
name = "mlops-week4"
version = "0.1.0"
description = "purpose:usage of lightning modules with uv, dev containers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning[extra]==2.1.0",
    "loguru>=0.7.2",
    "rich>=13.9.2",
    "timm>=1.0.9",
    "torch==2.4.1+cpu",
    "torchmetrics>=1.0.3",
    "torchvision==0.19.1+cpu",
    "hydra-core"
]
