[project]
name = "mlops-week7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.7"
dependencies = [
    "lightning[extra]==2.1.0",
    "loguru>=0.7.2",
    "rich>=13.9.2",
    "timm>=1.0.9",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.4.0%2Bcpu-cp311-cp311-linux_x86_64.whl",
    "torchvision @ https://download.pytorch.org/whl/cpu/torchvision-0.19.0%2Bcpu-cp311-cp311-linux_x86_64.whl",
    "torchmetrics>=1.0.3"
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu"