[project]
name = "mlops-week7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.7"
dependencies = [
    "lightning[extra]==2.1.0",
    "loguru>=0.7.2",
    "rich>=13.9.2",
    "timm>=1.0.9",
    "torch==2.4.1+cpu",
    "torchvision==0.19.1+cpu",
    "torchmetrics>=1.0.3",
    "rootutils==1.0.7",
    "hydra-core==1.3.0",
    "comet-ml>=3.31.0",
    "mlflow>=1.0.0",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "coverage==7.6.3",
    "pytest-order==1.3.0",
    "pytest-ordering==0.6",
    "pytest-dependency==0.6.0",
    "MarkupSafe==2.0.1"

]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu"

[tool.coverage.report]
include = ["src/**/*.py"]
show_missing = true